# matchmake-rs

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  matchmaker.rs  player.rs
