[package]
name = "matchmake-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.7", features = ["ws"] }
axum-extra = { version = "0.5.0", features = ["cookie-signed"] }
futures-util = "0.3.26"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3", features = ["v4", "serde"] }
