[package]
name = "matchmake-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.7", features = ["ws"] }
axum-extra = { version = "0.5.0", features = ["cookie-signed"] }
lazy_static = "1.4.0"
uuid = { version = "1.3", features = ["v4", "serde"] }

futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
